@@ -14,14 +14,14 @@ engine = pyrocore.torrent.rtorrent:RtorrentEngine
 rtorrent_rc = ~/.rtorrent.rc
 
 # The default output format for listing
-output_format = \  $(name)s {$(tracker_alias)s}
+output_format = \  $(name)s {$(alias)s}
                 \    $(is_private)s $(is_open)s  R:$(ratio)6.2f  SZ:$(size.sz)s  U:$(up.sz)s/s  D:$(down.sz)s/s  $(message)s
 
 # The default output format for actions
-action_format = $(action)8s $(name)s {$(tracker_alias)s}
+action_format = $(action)8s $(name)s {$(alias)s}
 
 # The default sort order
-sort_fields = name,tracker_alias
+sort_fields = name,alias
 
 
 [ANNOUNCE]
