@@ -2,6 +2,7 @@ pyroscope (0.3.2) hardy; urgency=low
 
   * Implemented --start, --close, and --dry-run
   * Fixed encoding issues when printing to a pipe (i.e. not to a tty)
+  * Renamed "tracker_alias" to "alias" (adapt your "config.ini")
 
  -- pyroscope <pyroscope.project@gmail.com>  Sat, 13 Mar 2010 23:27:04 +0100
 
